# layout-prompter

./: CHANGELOG.md  pyproject.toml
examples/: poster_layout.py  rico25.py
settings/: poster_layout.yaml  rico_25.yaml
src/layout_prompter/: Makefile  layout_prompter.py  preprocessors.py  settings.py  testing.py  visualizers.py
src/layout_prompter/datasets/: __init__.py  poster_layout.py  rico.py
src/layout_prompter/models/: __init__.py  layout_data.py  serialized_data.py
src/layout_prompter/modules/: rankers.py  selectors.py  serializers.py
src/layout_prompter/preprocessors/: __init__.py  base.py  content_aware.py  content_aware_processor.py  gen_type.py  gen_type_processor.py  gen_type_size.py  gen_type_size_processor.py
src/layout_prompter/transforms/: __init__.py  base.py  discretize_bboxes.py  label_dict_sort.py  lexicographic_sort.py  saliency_map_to_bboxes.py  shuffle_elements.py
src/layout_prompter/utils/: __init__.py  (+3 more)
tests/: conftest.py  layout_prompter_test.py  settings_test.py  visualizer_test.py  visualizers_comprehensive_test.py  visualizers_test.py
tests/datasets/: poster_layout_test.py
tests/models/: serialized_data_test.py
tests/modules/: rankers_test.py  selectors_test.py  serializers_test.py
tests/preprocessors/: content_aware_processor_test.py
tests/transforms/: discretize_bboxes_test.py  label_dict_sort_test.py  lexicographic_sort_test.py  saliency_comprehensive_test.py  saliency_map_to_bboxes_test.py
tests/utils/: bbox_comprehensive_test.py  bbox_test.py  configuration_test.py  image_comprehensive_test.py  metrics_test.py
(+7 files in other folders)
